--- a/math/python_conversion/notebooks/01_named_matrix.ipynb
+++ b/math/python_conversion/notebooks/01_named_matrix.ipynb
@@ -13,6 +13,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -33,6 +34,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Create a simple votes matrix with 5 participants and 4 comments\n",
     "# Votes are: 1 (agree), -1 (disagree), NaN (pass)\n",
@@ -74,6 +76,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Get a row by name (participant's votes)\n",
     "p0_votes = vote_matrix.get_row_by_name(\"p0\")\n",
@@ -99,6 +102,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Update an existing vote\n",
     "updated_matrix = vote_matrix.update(\"p0\", \"c2\", 1)  # Change p0's vote on c2 from -1 to 1\n",
@@ -137,6 +141,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Create a subset of the matrix by selecting specific rows (participants)\n",
     "subset_rows = [\"p0\", \"p2\", \"p4\"]\n",
@@ -172,6 +177,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Create a visualization of the vote matrix\n",
     "fig, ax = plt.subplots(figsize=(10, 6))\n",
@@ -224,6 +230,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Create a larger, more realistic example\n",
     "num_participants = 100\n",
@@ -295,7 +302,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -309,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
